--- a/lectures/6/css/style.css
+++ b/lectures/6/css/style.css
@@ -1,6 +1,142 @@
-* {
+*{
     font-family: Verdana, Arial, sans-serif;
 }
 a {
     color: #70579D;
+}
+#main
+{
+    max-width: 800px;
+    margin: auto;
+    background-color: rgba(1,2,555,0.1)
+}
+.article
+{
+    border: 2px solid #6d4b73;
+    border-radius: 18px;
+    width: auto;
+    margin: 0 0 10px 0;
+    padding: 10px 12px;
+}
+.article-name h1
+{
+      font-size: 24px;
+    font-family: unset;
+    letter-spacing: 3px;
+    margin-bottom: 0;
+
+}
+.article-opt
+{
+    border-radius: 50%;
+    height: 24px;
+    text-align: center;
+    width: 24px;
+    line-height: 2.5;
+
+}
+.article-opt:hover
+{
+    color:red;
+
+}
+.article-overview
+{
+    font-size: 75%;
+}
+.article-overview a
+{
+    text-decoration:none
+
+}
+.article-overview a:hover
+{
+    text-decoration:underline;
+}
+
+
+.pipe
+{
+    color:#e01686;
+    margin:0 10px
+}
+.text-muted
+{
+    opacity:0.6
+}
+.text-small
+{
+    font-size:85%
+}
+.lister-list
+{
+    width:100%;
+    margin-top:30px ;
+}
+.lister-list > .lister-item
+{
+    background-color: rgba(209, 134, 212, 0.15);
+    margin-bottom:30px;
+    padding:10px 10px 20px;
+}
+.lister-list> .lister-item >.lister-item-image
+{
+    display:inline-block;
+
+}
+
+
+.lister-list> .lister-item >.lister-item-image img
+{
+
+    box-shadow: 3px 2px 3px 1px rgba(21, 18, 226, 0.5);
+
+    height:200px;
+    width:120px;
+}
+.lister-list> .lister-item >.lister-item-content
+{
+    width:75%;
+    float:right;
+}
+.lister-list> .lister-item >.lister-item-content> h3
+{
+    margin:0 0 0.5em;
+    padding:0;
+}
+
+.lister-list> .lister-item >.lister-item-content>h3 >a
+{
+    color:deeppink;
+    text-decoration:none;
+    text-transform:uppercase;
+    font-family:'Bangers',cursive;
+    letter-spacing:3px;
+}
+
+.lister-list> .lister-item >.lister-item-content>h3 >.lister-item-year
+{
+    font-size:small;
+    font-weight:normal;
+}
+.lister-list> .lister-item >.lister-item-content>.lister-item-summary
+{
+    line-height:140%;
+    font-size:13px;
+}
+.lister-list> .lister-item >.lister-item-content>.lister-item-summary::first-letter
+{
+    color:azure;
+    font-size:1.3em;
+}
+.lister-item-summary::selection
+{
+    color:yellow;
+    background-color:#1655a2;
+
+}
+.lister-list>.lister-item>.lister-item-content a
+{
+    text-decoration:none;
+    color:#9e6033;
 }
