--- a/css/home.css
+++ b/css/home.css
@@ -81,3 +81,36 @@ body {
     }
 
 }
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 5px;
+}
+@media screen and (max-width: 500px) {
+    .column {
+        width: 100%;
+        float: left;
+        padding: 5px;
+    }
+}
+
+@media screen and(max-width: 768px){
+    .column{
+        width: 50%;
+        float: left;
+        padding: 5px;
+    }
+}
+
+@media screen and(max-width: 992px){
+    .column{
+        width: 25%;
+        float: left;
+        padding: 5px;
+    }
+}
+
+
+
+
