--- a/css/signup-signin.css
+++ b/css/signup-signin.css
@@ -1,3 +1,39 @@
+body{
+    background: gray;
+}
+#form{
+    background-color: white;
+    min-height: 1300px;
+    padding: 10px 50px 50px 50px;
+}
+.signup{
+    font-size: 80px;
+    font-family: "Nirmala UI Semilight";
+    font-weight: 500;
+    border-bottom-style: dashed;
+}
+.username{
+    font-size: 40px;
+}
+.name{
+    height: 50px;
+}
+.add{
+    font-size: 40px;
+}
+.btn-primary{
+    border-radius: 0px;
+    padding: 10px;
+    width: 200px;
+}
+.btn-danger{
+    border-radius: 0px;
+    padding: 10px;
+    width: 200px;
+}
+
+
+
 *{
     box-sizing: border-box;
 }
